
Tools
* add signal handling
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info
  - create info handle ?

Test:
* add autoconf/make test suite

Beta release
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation

20101111
* updated configure.ac
* updated include/error.h, include/types.h
* updated array type
* updated liberror, libsystem, libbfio, libfmapi, libfvalue
* added libnk2.rc
* added modification time API function

20101023
* updated include/error.h
* updated common, liberror, libnotify, libsystem, libbfio, libfmapi, libfvalue

20100912
* updated configure
* updated libcstring, libsystem, libuna, libbfio, libfdatetime, libfguid,
  libfmapi, libfvalue, libfwnt
* updated array type
* code clean up
* changes for libfvalue update
* updated msvscpp files
* corrected help output of nk2export
* updated manuals

20100721
* updated include/codepage.h
* updated include/error.h and liberror
* updated common, libsystem, libuna, libbfio, libfdatetime, libfguid,
  libfmapi, libwnt
* updated array type
* added libfvalue
* clean up and refactoring
* fix in set codepage function
* updated codepage support for nk2export
* added README_mingw

20100706
* updated configure.ac, common, libuna, libbfio, libsystem, libfdatetime,
  libfmapi, libfwnt
* updated array type

20100628
* update for libfmapi
* updated msvcpp files

20100627
* updated common, libcstring, liberror, libnotify, libsystem, libuna,
  libbfio, libfdatetime, libfmapi
* clean up
* updated codepages
* updated array type
* added libfguid, libfwnt

20100514
* small change in libnk2_file.c
* updated common, liberror

20100510
* updated msvscpp files
* updated macosx files
* email change in manuals

20100505
* updated common, libcstring, liberror, libnotify, libfdatetime, libfmapi,
  libuna, libbfio, libsystem
* changed amount of in number of