@@ -38,24 +38,25 @@
 
 #include "nk2input.h"
 
-/* Determines the codepage from an argument string
- * Returns 1 if successful or -1 on error
+/* Determines the codepage from a string
+ * Returns 1 if successful, 0 if unsupported value or -1 on error
  */
 int nk2input_determine_ascii_codepage(
-     const libcstring_system_character_t *argument,
+     const libcstring_system_character_t *string,
      int *ascii_codepage,
      liberror_error_t **error )
 {
 	static char *function = "nk2input_determine_ascii_codepage";
+	size_t string_length  = 0;
 	int result            = -1;
 
-	if( argument == NULL )
+	if( string == NULL )
 	{
 		liberror_error_set(
 		 error,
 		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
 		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid argument string.",
+		 "%s: invalid string.",
 		 function );
 
 		return( -1 );
@@ -71,252 +72,278 @@ int nk2input_determine_ascii_codepage(
 
 		return( -1 );
 	}
-	if( libcstring_system_string_compare(
-	     argument,
-	     _LIBCSTRING_SYSTEM_STRING( "ascii" ),
-	     5 ) == 0 )
+	string_length = libcstring_system_string_length(
+	                 string );
+
+	if( string_length == 5 )
 	{
-		*ascii_codepage = LIBNK2_CODEPAGE_ASCII;
-		result          = 1;
+		if( libcstring_system_string_compare(
+		     string,
+		     _LIBCSTRING_SYSTEM_STRING( "ascii" ),
+		     5 ) == 0 )
+		{
+			*ascii_codepage = LIBNK2_CODEPAGE_ASCII;
+			result          = 1;
+		}
 	}
 #if defined( HAVE_ISO_CODEPAGES )
-	else if( libcstring_system_string_compare(
-	          argument,
-	          _LIBCSTRING_SYSTEM_STRING( "iso" ),
-	          3 ) == 0 )
+	if( ( string_length == 10 )
+	 || ( string_length == 11 ) )
 	{
-		if( ( argument[ 3 ] != '-' )
-		 && ( argument[ 3 ] != '_' ) )
+		if( libcstring_system_string_compare(
+		     string,
+		     _LIBCSTRING_SYSTEM_STRING( "iso" ),
+		     3 ) == 0 )
 		{
-		}
-		else if( libcstring_system_string_compare(
-		          &( argument[ 4 ] ),
-		          _LIBCSTRING_SYSTEM_STRING( "8859" ),
-		          4 ) == 0 )
-		{
-			if( ( argument[ 8 ] != '-' )
-			 && ( argument[ 8 ] != '_' ) )
+			if( ( string[ 3 ] != '-' )
+			 && ( string[ 3 ] != '_' ) )
 			{
 			}
 			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "10" ),
-				  2 ) == 0 )
+				  &( string[ 4 ] ),
+				  _LIBCSTRING_SYSTEM_STRING( "8859" ),
+				  4 ) == 0 )
 			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_10;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "11" ),
-				  2 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_11;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "13" ),
-				  2 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_13;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "14" ),
-				  2 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_14;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "15" ),
-				  2 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_15;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "16" ),
-				  2 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_16;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "1" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_1;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "2" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_2;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "3" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_3;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "4" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_4;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "5" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_5;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "6" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_6;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "7" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_7;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "8" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_8;
-				result          = 1;
-			}
-			else if( libcstring_system_string_compare(
-				  &( argument[ 9 ] ),
-				  _LIBCSTRING_SYSTEM_STRING( "9" ),
-				  1 ) == 0 )
-			{
-				*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_9;
-				result          = 1;
+				if( ( string[ 8 ] != '-' )
+				 && ( string[ 8 ] != '_' ) )
+				{
+				}
+				else if( string_length == 10 )
+				{
+					if( libcstring_system_string_compare(
+					     &( string[ 9 ] ),
+					     _LIBCSTRING_SYSTEM_STRING( "1" ),
+					     1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_1;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "2" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_2;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "3" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_3;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "4" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_4;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "5" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_5;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "6" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_6;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "7" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_7;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "8" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_8;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "9" ),
+						  1 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_9;
+						result          = 1;
+					}
+				}
+				else if( string_length == 11 )
+				{
+					if( libcstring_system_string_compare(
+					     &( string[ 9 ] ),
+					     _LIBCSTRING_SYSTEM_STRING( "10" ),
+					     2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_10;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "11" ),
+						  2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_11;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "13" ),
+						  2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_13;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "14" ),
+						  2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_14;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "15" ),
+						  2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_15;
+						result          = 1;
+					}
+					else if( libcstring_system_string_compare(
+						  &( string[ 9 ] ),
+						  _LIBCSTRING_SYSTEM_STRING( "16" ),
+						  2 ) == 0 )
+					{
+						*ascii_codepage = LIBNK2_CODEPAGE_ISO_8859_16;
+						result          = 1;
+					}
+				}
 			}
 		}
 	}
 #endif
-	else if( libcstring_system_string_compare(
-	          argument,
-	          _LIBCSTRING_SYSTEM_STRING( "windows" ),
-	          7 ) == 0 )
+	if( ( string_length == 11 )
+	 || ( string_length == 12 ) )
 	{
-		if( ( argument[ 7 ] != '-' )
-		 && ( argument[ 7 ] != '_' ) )
+		if( libcstring_system_string_compare(
+		     string,
+		     _LIBCSTRING_SYSTEM_STRING( "windows" ),
+		     7 ) == 0 )
 		{
-		}
-		else if( libcstring_system_string_compare(
-		          &( argument[ 8 ] ),
-		          _LIBCSTRING_SYSTEM_STRING( "874" ),
-		          3 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_874;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-		          &( argument[ 8 ] ),
-		          _LIBCSTRING_SYSTEM_STRING( "1250" ),
-		          4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1250;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1251" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1251;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1252" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1252;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1253" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1253;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1253" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1253;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1254" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1254;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1255" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1255;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1256" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1256;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1257" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1257;
-			result          = 1;
-		}
-		else if( libcstring_system_string_compare(
-			  &( argument[ 8 ] ),
-			  _LIBCSTRING_SYSTEM_STRING( "1258" ),
-			  4 ) == 0 )
-		{
-			*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1258;
-			result          = 1;
+			if( ( string[ 7 ] != '-' )
+			 && ( string[ 7 ] != '_' ) )
+			{
+			}
+			else if( string_length == 11 )
+			{
+				if( libcstring_system_string_compare(
+				     &( string[ 8 ] ),
+				     _LIBCSTRING_SYSTEM_STRING( "874" ),
+				     3 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_874;
+					result          = 1;
+				}
+			}
+			else if( string_length == 12 )
+			{
+				if( libcstring_system_string_compare(
+				     &( string[ 8 ] ),
+				     _LIBCSTRING_SYSTEM_STRING( "1250" ),
+				     4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1250;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1251" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1251;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1252" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1252;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1253" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1253;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1253" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1253;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1254" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1254;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1255" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1255;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1256" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1256;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1257" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1257;
+					result          = 1;
+				}
+				else if( libcstring_system_string_compare(
+					  &( string[ 8 ] ),
+					  _LIBCSTRING_SYSTEM_STRING( "1258" ),
+					  4 ) == 0 )
+				{
+					*ascii_codepage = LIBNK2_CODEPAGE_WINDOWS_1258;
+					result          = 1;
+				}
+			}
 		}
 	}
 	return( result );
